--- a/about.html
+++ b/about.html
@@ -25,12 +25,12 @@
 <body class="bg-gray-100">
     <nav class="bg-green-600 p-4 text-white sticky top-0 z-10">
         <div class="container mx-auto flex justify-between items-center">
-            <a class="text-2xl font-bold" href="/index.html">E-Waste Management</a>
+            <a class="text-2xl font-bold" href="index.html">E-Waste Management</a>
             <div>
-                <a class="mx-2 hover:underline" href="/index.html">Home</a>
-                <a class="mx-2 hover:underline" href="/about.html">About</a>
-                <a class="mx-2 hover:underline" href="/services.html">Services</a>
-                <a class="mx-2 hover:underline" href="/contact.html">Contact</a>
+                <a class="mx-2 hover:underline" href="index.html">Home</a>
+                <a class="mx-2 hover:underline" href="about.html">About</a>
+                <a class="mx-2 hover:underline" href="services.html">Services</a>
+                <a class="mx-2 hover:underline" href="contact.html">Contact</a>
             </div>
         </div>
     </nav>
